# PDFMatrix

./: LICENSE  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  script.py  setup.sh
frontend/: .gitignore  README.md  copy-pdfjs-worker.js  index.html  package-lock.json  package.json  setup-webviewer.sh  tsconfig.app.json  tsconfig.app.tsbuildinfo  update-theme.js  vite.config.ts
frontend/dev-dist/: sw.js  workbox-94b5d2b3.js
frontend/public/: favicon.icoZone.Identifier  robots.txt  site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdvancedPdfEditor.tsx  ExportControls.tsx  ImagesToPdf.tsx  PdfCompressor.tsx  PdfEditor.tsx  PdfMerger.tsx  PdfPageNumbers.tsx  PdfPasswordProtection.tsx  PdfQualitySelector.tsx  PdfReorder.tsx  PdfResize.tsx  PdfRotation.tsx  PdfSplitter.tsx  PdfToImages.tsx  PdfUploader.tsx  PdfWatermark.tsx  ThemeWrapper.tsx
frontend/src/store/: pdfStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: fontHandler.ts  pdfTextExtractor.ts  pdfWorker.ts
