[project]
name = "pdfmatrix-backend"
version = "0.1.0"
description = "PDF Matrix Backend API with document conversion support (LibreOffice/unoconv)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pypdf>=3.17.0",
    "unoconv>=0.9.0",
    "python-docx>=1.1.0",
    "pillow>=10.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
